--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,6 +8,7 @@ defaultContentLanguage = "en"
 enableRobotsTXT = true
 paginate = 10
 summaryLength = 0
+enableEmojify = true
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
